--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
     </div>
     <div class="section-four">
         <div class="footer">
-            <div>
+            <div class="footer-text">
                 <h4>Call to action! It's time!</h4>
                 <p>Sign up for our product by clicking that button right over there</p>
 
             </div>
-            <button>Sign up</button>
+            <button class="footer-button">Sign up</button>
     
         </div>
     </div>
